PROJECT(doc)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#################
# Installation. #
#################

INCLUDE(DirInstallPaths)
INCLUDE(ConvertTextFilesToNative)

CONVERT_TEXT_FILES_TO_NATIVE(LICENSE_FILES
	gpl-2.0.txt
	lgpl-2.1.txt
	cc-by-sa-3.0.txt
	bsd-3.txt
	)

CONVERT_TEXT_FILES_TO_NATIVE(README_FILES
	../README.md
	)

CONVERT_TEXT_FILES_TO_NATIVE(EXAMPLE_FILES
	GcnMcFileDb.EXAMPLE.xml
	)

INSTALL(FILES ${LICENSE_FILES} ${README_FILES} ${EXAMPLE_FILES}
	DESTINATION "${DIR_INSTALL_DOC}"
	COMPONENT "doc"
	)

IF(WIN32)
	INSTALL(FILES ${README_FILES}
		DESTINATION "."
		COMPONENT "doc"
		)
ENDIF(WIN32)
