PROJECT(extlib)
cmake_minimum_required(VERSION 2.6.0)

# External libraries.

# Assembly optimizations.
# TODO: Test on all archs and fix Z_PREFIX issues.
# TODO: If MASM, only enable on cmake-2.6.3+
# TODO: If nasm/yasm, only enable on cmake-2.8.4+
# TODO: Symbol redefinitions.
IF(0)
IF(CMAKE_SYSTEM_PROCESSOR MATCHES "^(i.|x)86\$")
	SET(ASM686 "ON")
ELSEIF(CMAKE_SYSTEM_PROCESSOR MATCHES "^x86_64\$")
	SET(AMD64 "ON")
ENDIF()
ENDIF(0)

# Don't install any of these libraries.
SET(OLD_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
SET(OLD_SKIP_INSTALL_LIBRARIES ${SKIP_INSTALL_LIBRARIES})
SET(OLD_SKIP_INSTALL_HEADERS ${SKIP_INSTALL_HEADERS})
SET(OLD_SKIP_INSTALL_FILES ${SKIP_INSTALL_FILES})
SET(OLD_SKIP_INSTALL_ALL ${SKIP_INSTALL_ALL})
SET(BUILD_SHARED_LIBS OFF)
SET(SKIP_INSTALL_LIBRARIES ON)
SET(SKIP_INSTALL_HEADERS ON)
SET(SKIP_INSTALL_FILES ON)
SET(SKIP_INSTALL_ALL ON)

IF(USE_INTERNAL_ZLIB)
	# Use the internal copy of zlib. (statically-linked)
	# Use Z_PREFIX to prevent conflicts with libQtCore's internal zlib on Win32.
	SET(Z_PREFIX 1)
	ADD_SUBDIRECTORY(zlib)
ENDIF(USE_INTERNAL_ZLIB)

IF(USE_INTERNAL_PNG)
	# Use the internal copy of libpng. (statically-linked)
	SET(PNG_SHARED OFF)
	SET(PNG_STATIC ON)
	SET(PNG_TESTS OFF)
	SET(PNG_DEBUG OFF)
	ADD_SUBDIRECTORY(libpng)
ENDIF(USE_INTERNAL_PNG)

IF(USE_INTERNAL_PCRE)
	# Use the internal copy of pcre. (statically-linked)
	# PCRE options are defined in pcre/pcre.mcrecover.options.cmake.
	ADD_SUBDIRECTORY(pcre)
ENDIF(USE_INTERNAL_PCRE)

SET(BUILD_SHARED_LIBS ${OLD_BUILD_SHARED_LIBS})
SET(SKIP_INSTALL_LIBRARIES ${OLD_SKIP_INSTALL_LIBRARIES})
SET(SKIP_INSTALL_HEADERS ${OLD_SKIP_INSTALL_HEADERS})
SET(SKIP_INSTALL_FILES ${OLD_SKIP_INSTALL_FILES})
SET(SKIP_INSTALL_ALL ${OLD_SKIP_INSTALL_ALL})
UNSET(OLD_BUILD_SHARED_LIBS)
UNSET(OLD_SKIP_INSTALL_LIBRARIES)
UNSET(OLD_SKIP_INSTALL_HEADERS)
UNSET(OLD_SKIP_INSTALL_FILES)
UNSET(OLD_SKIP_INSTALL_ALL)
