PROJECT(src)
cmake_minimum_required(VERSION 2.6.0)

# Include the current source and binary directories.
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")

# Check for C++ 2011 support.
# If C++ 2011 isn't available, compatibility definitions will be enabled.
# NOTE: CHECK_CXX11_COMPILER_FLAG() needs to be called here again.
# It worked without this previously due to old config.h files in the build directory.
#INCLUDE(CheckCXXSourceCompiles)
#INCLUDE(CheckCXX11CompilerFlag)
# FIXME: Move this to a module and add MSVC support.
#CHECK_CXX11_COMPILER_FLAG(MCRECOVER_CXX11_CXXFLAG)

#SET(SAFE_CMAKE_REQUIRED_DEFINITIONS "${CMAKE_REQUIRED_DEFINITIONS}")
#SET(CMAKE_REQUIRED_DEFINITIONS "${MCRECOVER_CXX11_CXXFLAG}")
#CHECK_CXX_SOURCE_COMPILES("int main(void) { void *ptr = nullptr; return 0; }" HAVE_CXX_2011)
#SET(CMAKE_REQUIRED_DEFINITIONS "${SAFE_CMAKE_REQUIRED_DEFINITIONS}")
#UNSET(SAFE_CMAKE_REQUIRED_DEFINITIONS)

SET(HAVE_CXX_2011 1)
CONFIGURE_FILE("c++11-compat.h.in" "${CMAKE_CURRENT_BINARY_DIR}/c++11-compat.h")

# C++11 compatibility header.
# NOTE: This must be included regardless of C++11 support in the compiler.
# gcc-4.6 supports some C++11, but is missing explicit virtual overrides.
IF(MSVC)
	SET(MCRECOVER_CXX11_COMPAT_HEADER "-FI${CMAKE_BINARY_DIR}/src/c++11-compat.h")
ELSE(MSVC)
	SET(MCRECOVER_CXX11_COMPAT_HEADER "-include ${CMAKE_BINARY_DIR}/src/c++11-compat.h")
ENDIF(MSVC)
SET(MCRECOVER_CXXFLAG_CXX11_COMPAT ${MCRECOVER_CXX11_COMPAT_HEADER})

# Add the C++11 compatibility header to CFLAGS/CXXFLAGS.
# TODO: Move -DQT_NO_DEBUG to mcrecover?
SET(CMAKE_C_FLAGS_DEBUG		"${CMAKE_C_FLAGS_DEBUG} ${MCRECOVER_CXX11_COMPAT_HEADER}")
SET(CMAKE_CXX_FLAGS_DEBUG	"${CMAKE_CXX_FLAGS_DEBUG} ${MCRECOVER_CXXFLAG_CXX11_COMPAT}")
SET(CMAKE_C_FLAGS_RELEASE	"-DQT_NO_DEBUG ${CMAKE_C_FLAGS_RELEASE} ${MCRECOVER_CXX11_COMPAT_HEADER}")
SET(CMAKE_CXX_FLAGS_RELEASE	"-DQT_NO_DEBUG ${CMAKE_CXX_FLAGS_RELEASE} ${MCRECOVER_CXXFLAG_CXX11_COMPAT}")

# Source Code subdirectories.
ADD_SUBDIRECTORY(libgctools)
ADD_SUBDIRECTORY(mcrecover)
ADD_SUBDIRECTORY(gcbanner)

FIND_PROGRAM(UNIX2DOS unix2dos)
IF(NOT UNIX2DOS)
	ADD_SUBDIRECTORY(miniu2d)
ENDIF(NOT UNIX2DOS)
